--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&family=Syne:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header>
+    <a href="#">
+      <img src="./assets/icons/logo.svg" alt="logo">
+    </a>
+
+    <a href="#">
+      <img src="./assets/icons/shopping-bag.svg" alt="bolsa de compras">
+      <span>1</span>
+    </a>
+  </header>
 </body>
 </html>
