banner animado finish

--- a/index.html
+++ b/index.html
@@ -57,5 +57,26 @@
       </div>
     </div>
   </section>
+
+  <section class="banner">
+    <div class="scroller bg-gradient-animation">
+      <div class="rolling">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+        <img src="./assets/icons/banner.svg" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
