--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&family=Syne:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="top">
     <a href="#">
       <img src="./assets/icons/logo.svg" alt="logo">
     </a>
@@ -76,6 +76,48 @@
         <img src="./assets/icons/banner.svg" alt="">
         <img src="./assets/icons/banner.svg" alt="">
       </div>
+    </div>
+  </section>
+
+  <section class="galeria">
+    <header>
+      <span>GALERIA DE FOTOS</span>
+      <h2>#usesnitap por aí</h2>
+    </header>
+
+    <div class="content">
+      <figure>
+        <img src="./assets/images/01.png" alt="">
+        <figcaption>
+          <img src="./assets/images/insta-pic.png" alt="">
+          <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure class="data-delay">
+        <img src="./assets/images/02.png" alt="">
+        <figcaption>
+          <img src="./assets/images/insta-pic.png" alt="">
+          <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="./assets/images/03.png" alt="">
+        <figcaption>
+          <img src="./assets/images/insta-pic.png" alt="">
+          <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure class="data-delay">
+        <img src="./assets/images/04.png" alt="">
+        <figcaption>
+          <img src="./assets/images/insta-pic.png" alt="">
+          <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
     </div>
   </section>
 </body>
