--- a/index.html
+++ b/index.html
@@ -120,5 +120,33 @@
 
     </div>
   </section>
+
+  <footer>
+    <div class="logo">
+      <img src="./assets/icons/logo.svg" alt="">
+      Snitap
+    </div>
+
+    <nav>
+      <a href="#">Sobre</a>
+      <a href="#">Nossa loja</a>
+      <a href="#">Políticas de privacidade</a>
+    </nav>
+
+    <div class="social-links">
+      <a href="#" title="instagram">
+        <img src="./assets/icons/instagram.svg" alt="">
+      </a>
+      <a href="#" title="facebook">
+        <img src="./assets/icons/facebook.svg" alt="">
+      </a>
+      <a href="#" title="Youtube">
+        <img src="./assets/icons/youtube.svg" alt="">
+      </a>
+      <a href="#" title="tiktok">
+        <img src="./assets/icons/tiktok.svg" alt="">
+      </a>
+    </div>
+  </footer>
 </body>
 </html>
